# sel_intl

./: CMakeLists.txt  README.md  generate.cmake
.github/workflows/: ci.yml
cmake/generators/: lemon.cmake
include/sel/: intl.h  intl_gettext.h
source/sel/: intl.cpp  intl_catalog.cpp  intl_catalog.hpp  intl_plural_expr.cpp  intl_plural_expr.hpp  intl_plural_expr.re  intl_plural_expr.re.ipp  intl_plural_expr.yy  intl_plural_expr.yy.ipp  intl_win32.cpp  intl_win32.hpp
test/: catalog-plural.mo  catalog-plural.po  catalog-simple.mo  catalog-simple.po  intl_tests.cpp  main.cpp
